--- a/vyne-query-service/src/main/web/src/t2-colors.scss
+++ b/vyne-query-service/src/main/web/src/t2-colors.scss
@@ -20,6 +20,11 @@ $error-dark: #ea422e;
 $error-medium: #f9c5be;
 $error-soft: #FDEBE9;
 
+// Warning colors are taken from tailwind.
+// https://tailwindcss.com/docs/customizing-colors#default-color-palette
+$warning-light: #fef08a;
+$warning-dark: #fbbf24;
+
 $success-light: #70B349;
 $success-dark: #548636;
 $success-medium: #C2dfb0;
